# projeto

./: pyproject.toml
embaralha palavra/: dados.json  main.py
