[tool.poetry]
name = "projeto"
version = "0.1.0"
description = ""
authors = ["'Gabriel' <'gabrielpaulogpsc@gmail.com'>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
